# salary-reader

./: .gitignore  AUTO_UPDATE_README.md  README.md  SalaryReader.spec  UPDATE_FIX_INSTRUCTIONS.md  build.py  main.py  pyproject.toml  run.py
.github/workflows/: build.yml
app/: app.py
app/core/: logging_config.py
app/db/: __init__.py  database.py
app/drivers/: attendances.py
app/helpers/: helpers.py
app/iiko_business_api/: employees.py
app/models/: __init__.py  control_models.py  models.py
app/payslip_report/: payslip_report.py
app/screens/: edit_employees_window.py
app/styles/: department_combo_box.py
app/ui/: edit_employes_in role_dialog.ui  edit_employes_in_role_dialog.py  edit_employes_in_role_dialog.ui  main_window.ui  main_window_ui.py  styles.py
app/ui/controllers/: table_controller.py
iiko_api/: README.md  __init__.py  iiko_api.py  requirements.txt  setup.py
iiko_api/core/: __init__.py  base_client.py
iiko_api/core/config/: logging_config.py
iiko_api/endpoints/: __init__.py  employees.py
iiko_api/kc_iiko_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/salary_reader/: main.py  restart_helper.py  splash_screen.py
src/salary_reader/core/: control_models.py  database.py  errors.py  logging_config.py  models.py  paths.py  updater.py  version.py
src/salary_reader/db/: __init__.py
src/salary_reader/drivers/: attendances.py
src/salary_reader/helpers/: helpers.py  iiko_helpers.py  resources.py
src/salary_reader/iiko_business_api/: employees.py
src/salary_reader/iiko_init/: __init__.py
src/salary_reader/models/: __init__.py
src/salary_reader/payslip_report/: payslip_report.py
src/salary_reader/screens/: edit_employees_window.py
src/salary_reader/styles/: general_salary_table.py  general_table_excel_button.py  global.qss
src/salary_reader/ui/: edit_employes_in_role_dialog.ui  main_window.ui  main_window_ui.py  styles.py
tests/: test_department_codes.py
(+1 files in other folders)
