[tool.poetry]
name = "salary-reader"
version = "2.1.1"
description = ""
authors = ["Garik <khvatik.igor@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
requests = "^2.32.3"
loguru = "^0.7.2"
sqlalchemy = "^2.0.36"
xmltodict = "^0.14.2"
python-dotenv = "^1.0.1"
pywin32 = "^308"
openpyxl = "^3.1.5"
reportlab = "^4.3.0"
pysidesix-frameless-window = "^0.5.1"
pyside6 = "^6.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"